src/objects/Opportunity_Log__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Removed</fullName>
                </value>
                <value>
                    <fullName>Not offered by Olam</fullName>
                </value>
                <value>
                    <fullName>Line Item Value Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Logs</relationshipLabel>
        <relationshipName>Opportunity_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Olam_Offer_per_MT__c</fullName>
        <label>Original Olam Offer (per MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Original_Volume_MT__c</fullName>
        <label>Original Volume (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product2Id</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Opportunity Logs</relationshipLabel>
        <relationshipName>Opportunity_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_for_Removal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason for Removal</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Olam Offer (per MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume (MT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Log</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>